# game-sound

./: .gitignore  Cargo.toml  README.md
crates/gamesound-core/: Cargo.toml
crates/gamesound-core/src/: audio.rs  device.rs  hotkey.rs  lib.rs  mixer.rs  runtime.rs  sound.rs
crates/gamesound-desktop/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json
crates/gamesound-desktop/src/: App.tsx
crates/gamesound-desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
crates/gamesound-desktop/src-tauri/capabilities/: default.json
crates/gamesound-desktop/src-tauri/src/: events.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  state.rs  tray.rs
crates/gamesound-desktop/src-tauri/src/commands/: devices.rs  hotkeys.rs  mixer.rs  mod.rs  runtime.rs  settings.rs  sounds.rs
crates/gamesound-desktop/src/__tests__/: useRuntimeStore.test.ts  useSoundStore.test.ts
crates/gamesound-desktop/src/api/: devices.ts  hotkeys.ts  mixer.ts  runtime.ts  settings.ts  sounds.ts
crates/gamesound-desktop/src/components/: DeviceSelector.tsx  HotkeyCaptureModal.tsx  Layout.tsx  LevelMeter.tsx  NavbarButton.tsx  SoundCard.tsx  StatusBar.tsx
crates/gamesound-desktop/src/hooks/: useTauriEvent.ts
crates/gamesound-desktop/src/i18n/: index.ts
crates/gamesound-desktop/src/i18n/locales/: en.ts  zh.ts
crates/gamesound-desktop/src/pages/: Dashboard.tsx  DeviceSettings.tsx  HotkeySettings.tsx  Mixer.tsx  Settings.tsx  SetupGuide.tsx  SoundLibrary.tsx
crates/gamesound-desktop/src/stores/: useDeviceStore.ts  useHotkeyStore.ts  useMixerStore.ts  useRuntimeStore.ts  useSettingsStore.ts  useSoundStore.ts  useUiStore.ts
crates/gamesound-desktop/src/styles/: global.css  theme.ts
crates/gamesound-desktop/src/types/: index.ts
crates/gamesound-storage/: Cargo.toml
crates/gamesound-storage/src/: config.rs  db.rs  lib.rs
crates/gamesound-tui/: Cargo.toml
crates/gamesound-tui/src/: app.rs  main.rs  ui.rs
docs/: 01-项目背景与产品定位.md  02-需求规格说明书.md  03-功能清单与版本范围.md  04-TUI交互与页面设计.md  05-音频链路与混音架构.md  06-技术架构设计.md  07-数据模型与配置设计.md  08-命令与快捷键设计.md  09-开发计划与里程碑.md  10-测试验收方案.md  11-安装部署与用户配置指南.md  12-风险与后续演进.md  README.md
gamesound_logo_package/: README.md  manifest.json
gamesound_logo_package/src-tauri/icons/: icon.icns
