[workspace]
members = ["crates/gamesound-core", "crates/gamesound-storage", "crates/gamesound-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["GameSound contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
