[package]
name = "gamesound-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
cpal = "0.15"
symphonia = { version = "0.5", features = ["aac", "mp3", "flac", "isomp4", "ogg", "vorbis", "wav", "pcm"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
global-hotkey = "0.5"
rdev = "0.5"
