[package]
name = "gamesound"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gamesound"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
core-foundation-sys = "0.8"
gamesound-core = { path = "../gamesound-core" }
gamesound-storage = { path = "../gamesound-storage" }
