[package]
name = "gamesound-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["GameSound contributors"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
toml = "0.8"
gamesound-core = { path = "../../gamesound-core" }
gamesound-storage = { path = "../../gamesound-storage" }
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
